--- a/misc/elfish/on_sbcl/README
+++ b/misc/elfish/on_sbcl/README
@@ -59,4 +59,5 @@ NOTES
   # This dropped to 3x with non-multi infix:<+>, etc, on native integers.
   # This dropped to 1/5x with multi infix:<+>, etc, on native integers.
   # This increased to 1x with improved multi dispatch, still on native integers.
-
+  # This remained 1x with general rw-ability added, still native integers.
+  # This dropped to 1/2x with Int's.
