--- a/AUTHORS
+++ b/AUTHORS
@@ -176,7 +176,7 @@ Offer Kaye
 Oleg Kiselyov
 Ori "salty-horse" Avtalion                   אורי אבטליון
 Paolo "xerox" Martini
-Patrick R. "pmichaud" Michaud    (PMICHAUD)
+Patrick R. "pmichaud" Michaud    (PMIC)
 Paul Fenwick                     (PJF)
 Pawel "pmurias" Murias                      Paweł Murias
 Pawel "bbkr" Pabian
