--- a/README
+++ b/README
@@ -98,6 +98,10 @@ The mailing list for Pugs is perl6-compiler.  Subscribe by sending mail to
     http://groups-beta.google.com/group/perl.perl6.compiler (HTTP)
     nntp://nntp.perl.org/perl.perl6.compiler                (NNTP)
 
+There's a Google Group which gathers commit mails from the pugs repository:
+
+    http://groups.google.com/group/pugs-commits?hl=en
+
 Please submit bug reports to <pugsbugs@perl.org>.
 
 WEB SITES
